--- a/mia/Base.lproj/Setting.storyboard
+++ b/mia/Base.lproj/Setting.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
@@ -516,7 +515,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <animations/>
                                 <inset key="imageEdgeInsets" minX="-16" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <state key="normal" image="MD-BackIcon"/>
+                                <state key="normal" image="C-BackIcon"/>
                                 <connections>
                                     <action selector="backButtonPressed" destination="SZ7-Ve-eya" eventType="touchUpInside" id="HKQ-hD-WSv"/>
                                 </connections>
@@ -553,6 +552,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="MD-BackIcon" width="25" height="25"/>
+        <image name="C-BackIcon" width="345" height="41"/>
     </resources>
 </document>
