--- a/mia/Base.lproj/Share.storyboard
+++ b/mia/Base.lproj/Share.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -234,7 +233,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <animations/>
                                 <inset key="imageEdgeInsets" minX="-16" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <state key="normal" image="MD-BackIcon"/>
+                                <state key="normal" image="C-BackIcon"/>
                                 <connections>
                                     <action selector="backButtonPressed" destination="Dxq-Jl-kQw" eventType="touchUpInside" id="lPS-0R-EEz"/>
                                 </connections>
@@ -294,9 +293,9 @@
     <resources>
         <image name="C-AddMusicBG" width="160" height="160"/>
         <image name="C-AddMusicIcon" width="45" height="45"/>
+        <image name="C-BackIcon" width="345" height="41"/>
         <image name="C-CloseIcon-Red" width="10" height="10"/>
         <image name="C-LocationIcon" width="12" height="17"/>
         <image name="M-PlayIcon" width="35" height="35"/>
-        <image name="MD-BackIcon" width="25" height="25"/>
     </resources>
 </document>
