--- a/mia/Base.lproj/Login.storyboard
+++ b/mia/Base.lproj/Login.storyboard
@@ -59,6 +59,9 @@
                                 </constraints>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="10" maxY="10"/>
                                 <state key="normal" image="C-BackIcon"/>
+                                <connections>
+                                    <action selector="backButtonPressed" destination="AsC-p9-PE8" eventType="touchUpInside" id="ofE-Ky-wk0"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="L-LoginLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Dde-Ct-cGn">
                                 <rect key="frame" x="78" y="102" width="165" height="165"/>
